# NEV

./: .env.sample  Dockerfile  README.md  debug_email.py  docker-compose.yml  examples.md  pyproject.toml  requirements.txt  test_celery.py  test_email_settings.py  test_simple_celery.py
config/: celery.py  settings.py  urls.py
materials/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_initial.py  0003_subscription.py  0004_alter_course_options_alter_lesson_options.py  0005_course_updated_at.py
tests/: test_stripe.py
users/: admin.py  filters.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
users/management/commands/: create_payments.py  seed_data.py
users/migrations/: 0001_initial.py  0002_payment.py  0002_payment_payment_status_and_more.py
