[tool.poetry]
name = "Project_REST"
version = "0.1.0"
description = ""
authors = ["katja <gorbunovakatja530@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django-perms = "^2.1.0"
Django = "^5.2.3"
djangorestframework = "^3.16.0"
python-dotenv = "^1.1.0"
pillow = "^11.2.1"



[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
